fix image url's

--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ footer {
 }
 
 h2 {
-    background-image: url("./assets/images/honeycomb.jpg");
+    background-image: url("./assets/images/honeycomb.JPG");
     text-align: center;
     background-repeat: no-repeat;
     background-size: cover;
