--- a/style.css
+++ b/style.css
@@ -43,8 +43,9 @@ a {
 }
 
 .profile-image {
+    height: 200px;
     max-width: 160px;
-    border-radius: 50%;
+    border-radius: 100%;
     border: 2px solid white;
 }
 
