--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-.social-list {
-    background-color: black;
-    border-radius: 20px;
-}
-
 ul {
     list-style-type: none;
 }
@@ -201,13 +196,13 @@ input[type=submit] {
     font-size: 18px;
     color: #ffffff;
     cursor: pointer;
-    background: #54B689;
+    background: #077BFF;
     border: 1px solid black;
     border-radius: 10px;
 }
 
 input[type=submit]:hover {
-    background: #077BFF;
+    background: rgb(3, 83, 175);
 }
 
 .contact {
@@ -242,15 +237,16 @@ input[type=submit]:hover {
 @media only screen and (max-width: 992px) {
     .header {
         position: relative;
+        background-repeat: no-repeat;
+        background-size: cover;
     }
     #footer {
         margin-left: 0px;
     }
-}
-
-@media only screen and (min-width:100px) and (max-width:1136px) {
-    .fa-play,
-    .fa-github {
-        margin: 0px;
+    .bio {
+        background-color: transparent;
+    }
+    .nav-link {
+        background-color: transparent;
     }
 }
